kubernetes/dim-api-migration-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dim-api-migration-worker
  labels:
    app: dim-api-migration-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dim-api-migration-worker
  template:
    metadata:
      labels:
        app: dim-api-migration-worker
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: 'true'
    spec:
      restartPolicy: Always
      containers:
        - name: dim-api-migration-worker
          image: destinyitemmanager/dim-api:$COMMITHASH
          imagePullPolicy: Always
          command: ['node']
          args:
            - --enable-source-maps
            - api/stately/init/migrate-stately-to-postgres.js
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: '1'
              memory: 1Gi
