kubernetes/dim-api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dim-api
  labels:
    app: dim-api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      name: dim-api
  selector:
    app: dim-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dim-api
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: dim-api
  template:
    metadata:
      labels:
        app: dim-api
      annotations:
        'cluster-autoscaler.kubernetes.io/safe-to-evict': 'true'
        kubernetes.io/change-cause: $COMMITHASH
    spec:
      containers:
        - name: dim-api
          image: destinyitemmanager/dim-api:$COMMITHASH
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: '120m'
              memory: '110Mi'
          ports:
            - containerPort: 3000
              name: dim-api
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: dim-api
            initialDelaySeconds: 1
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: dim-api
            initialDelaySeconds: 1
            periodSeconds: 5
            failureThreshold: 1
