kubernetes/grafana-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      name: grafana
  selector:
    app: grafana
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
spec:
  replicas: 1
  serviceName: grafana
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          resources:
            requests:
              cpu: '10m'
              memory: '30Mi'
          ports:
            - containerPort: 3000
              name: grafana
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage
            #- mountPath: /etc/grafana/provisioning/datasources
            #  name: grafana-datasources
            #  readOnly: false
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage-claim
        #- name: grafana-datasources
        #  configMap:
        #    defaultMode: 420
        #    name: grafana-datasources
