kubernetes/graphite-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphite
  labels:
    app: graphite
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: graphite
    - port: 8125
      targetPort: 8125
      name: statsd
      protocol: UDP
  selector:
    app: graphite
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: graphite
spec:
  replicas: 1
  serviceName: graphite
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: graphite
  template:
    metadata:
      labels:
        app: graphite
    spec:
      containers:
        - name: graphite
          image: graphiteapp/graphite-statsd
          resources:
            requests:
              cpu: '20m'
              memory: '250Mi'
          ports:
            - containerPort: 80
              name: graphite
            - containerPort: 8125
              protocol: UDP
              name: statsd
          volumeMounts:
            - name: graphite-storage
              mountPath: /opt/graphite/storage
      volumes:
        - name: graphite-storage
          persistentVolumeClaim:
            claimName: graphite-storage-claim
